@@ -1,3 +1,7 @@
+2003-05-31	ujwal
+    
+    * Added an "Add" button to the AddressBook.
+
 2003-05-30	ujwal
 
     * Changed AddressBook window class back to NSPanel so that it 
